# ImagePathifier

./: .gitignore  CLAUDE.md  Cargo.toml  ImagePathifier.py  ImagePathifier_Original.py  README-rust.md  README.md  README_KR.md  README_VENV.md  build.bat  build.sh  pr_test.txt  requirements.txt  run.py  run_original.py  run_with_venv.bat  run_with_venv.ps1  run_with_venv.sh  setup_venv.bat  setup_venv.ps1  setup_venv.sh  test_import.py
src/: __init__.py  app.py  app.rs  clipboard.rs  config.py  config.rs  image_manager.py  image_manager.rs  main.py  main.rs
src/ui/: __init__.py  main_window.py  mod.rs  settings_dialog.rs  settings_window.py  settings_window.rs  thumbnail_grid.rs  top_panel.rs
src/utils/: __init__.py  clipboard.py
